methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:4: error: not found: value baissebrosse
    baissebrosse()
    ^SlugHunting:6: error: not found: value levebrosse
    levebrosse()
    ^SlugHunting:10: error: not found: value baissebrosse
       baissebrosse()
       ^SlugHunting:12: error: not found: value levebrosse
       levebrosse()
       ^SlugHunting:17: error: not found: value baissebrosse
     baissebrosse()
     ^SlugHunting:19: error: not found: value levebrosse
     levebrosse()
     ^